--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="myCanvas"></canvas>
-         <script src="sensor.js"></script>
-      <script src="utils.js"></script>
-      <script src="road.js"></script>
+    <canvas id="carCanvas"></canvas>
+    <canvas id="networkCanvas"></canvas>
+    <script src="network.js"></script>
+    <script src="sensor.js"></script>
+    <script src="utils.js"></script>
+    <script src="road.js"></script>
     <script src="controls.js"></script>
     <script src="car.js"></script>
     <script src="script.js"></script>
